# stlreader

./: .gitignore  CMakeLists.txt  Readme.md  build.sh  clean.sh  run_test.sh
src/: CMakeLists.txt  STLReader.cc  STLReader.h  ShellProgress.cc  ShellProgress.h
test/: CMakeLists.txt  gen_contour.cc  plot_contour.cc  stlreader.py  test.py  test_import.py
